<resources>
    <string name="app_name">BookShelf</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in_short">Sign in</string>

    <string name="welcome">"Welcome!"</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sign_in">Sign in</string>
    <string name="registration">Register</string>

    <string name="sign_out">Sign Out</string>
    <string name="add_your_tag">Add your tag</string>
    <string name="add">Add</string>
    <string name="dismiss">Dismiss</string>
    <string name="sign_out_msg">Successfully Sign-out! 🙂</string>
    <string name="sign_in_msg">Successfully Authenticated! 🙂</string>
    <string name="registered_msg">User Registration Successful! 🙂</string>
    <string name="error_1">Oops! Invalid email or password. 🙅</string>
    <string name="default_country">India</string>
    <string name="email_taken">Sorry, email is taken. Choose a new one.</string>
    <string name="invalid_email_password_msg">Invalid email or password</string>
</resources>